2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* console/Makefile.am: Remove all-local: $(ARCH).

2003-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reformat.
	* clock/Makefile.am: Reformat.
	* console/Makefile.am: Reformat.
	* include/Makefile.am: Reformat. Use dirstamps for preinstallation.
	* timer/Makefile.am: Reformat.

2003-10-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CANONICAL_HOST.

2003-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_CPU.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c, console/mcfuart.c, include/mcf5206e.h,
	include/mcfmbus.h, include/mcfuart.h, mbus/mcfmbus.c, timer/timer.c,
	timer/timerisr.S: URL for license changed.

2003-08-20	Joel Sherrill <joel@OARcorp.com>

	* clock/ckinit.c, console/mcfuart.c, timer/timer.c, timer/timerisr.S:
	Correct copyright statements.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* clock/Makefile.am: Reflect having moved automake/.
	* console/Makefile.am: Reflect having moved automake/.
	* include/Makefile.am: Reflect having moved automake/.
	* mbus/Makefile.am: Reflect having moved automake/.
	* timer/Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-01-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Eliminate *_O_FILES.
	Don't include @RTEMS_BSP@.cfg. 
	* console/Makefile.am: Likewise.
	* mbus/Makefile.am: Likewise.