@@ -1,3 +1,9 @@
+2003-12-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* clock/Makefile.am: Cosmetics.
+	* mbus/Makefile.am: Cosmetics.
+	* timer/Makefile.am: Cosmetics.
+
 2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* console/Makefile.am: Remove all-local: $(ARCH).
